# backend

./: .env.example  Dockerfile  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml
deploy/nginx/: Dockerfile
deploy/nginx/conf.d/: host.conf
src/: main.py
src/core/: config.py  routes.py
src/db/: base.py
src/db/dals/: story.py
src/db/models/: story.py
src/services/: fixtures.py  urls.py
src/services/data/: fixture.py
src/views/: media.py  scoring.py  story.py
